--- a/sisgns/src/main/webapp/css/treeview.css
+++ b/sisgns/src/main/webapp/css/treeview.css
@@ -51,7 +51,7 @@
 .css-treeview label::before,
 .css-treeview a,
 .css-treeview a::before {
-    background: url("/ellasa/images/icons.png") no-repeat;
+    background: url("/varejo/images/icons.png") no-repeat;
 }
 
 .css-treeview label,
