--- a/sisgns/src/main/webapp/font-awesome-4.1.0/css/font-awesome.css
+++ b/sisgns/src/main/webapp/font-awesome-4.1.0/css/font-awesome.css
@@ -22,7 +22,7 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-/* makes the font 33% larger relative to the icon container */
+/* makes the font 33% larger relative goTo the icon container */
 .fa-lg {
     font-size: 1.33333333em;
     line-height: 0.75em;
@@ -213,7 +213,7 @@
     color: #ffffff;
 }
 
-/* Font Awesome uses the Unicode Private Use Area (PUA) to ensure screen
+/* Font Awesome uses the Unicode Private Use Area (PUA) goTo ensure screen
    readers do not read off random characters that represent icons */
 .fa-glass:before {
     content: "\f000";
