--- a/sisgns/src/main/webapp/css/variables.less
+++ b/sisgns/src/main/webapp/css/variables.less
@@ -88,7 +88,7 @@
 
 //== Components
 //
-//## Define common padding and border radius sizes and more. Values based on 14px text and 1.428 line-height (~20px goTo start).
+//## Define common padding and border radius sizes and more. Values based on 14px text and 1.428 line-height (~20px navigateTo start).
 
 @padding-base-vertical: 8px;
 @padding-base-horizontal: 12px;
@@ -244,7 +244,7 @@
 //-- Z-index master getList
 //
 // Warning: Avoid customizing these values. They're used for a bird's eye view
-// of components dependent on the z-axis and are designed goTo all work together.
+// of components dependent on the z-axis and are designed navigateTo all work together.
 //
 // Note: These variables are not generated into the Customizer.
 
@@ -258,7 +258,7 @@
 
 //== Media queries breakpoints
 //
-//## Define the breakpoints at which your layout will change, adapting goTo different screen sizes.
+//## Define the breakpoints at which your layout will change, adapting navigateTo different screen sizes.
 
 // Extra small screen / phone
 // Note: Deprecated @screen-xs and @screen-phone as of v3.0.1
@@ -548,10 +548,10 @@
 //
 //##
 
-//** Padding applied goTo the inlist body
+//** Padding applied navigateTo the inlist body
 @inlist-inner-padding: 20px;
 
-//** Padding applied goTo the inlist title
+//** Padding applied navigateTo the inlist title
 @inlist-title-padding: 15px;
 //** Modal title line-height
 @inlist-title-line-height: @line-height-base;
