--- a/sisgns/src/main/webapp/font-awesome-4.1.0/less/larger.less
+++ b/sisgns/src/main/webapp/font-awesome-4.1.0/less/larger.less
@@ -1,7 +1,7 @@
 // Icon Sizes
 // -------------------------
 
-/* makes the font 33% larger relative goTo the icon container */
+/* makes the font 33% larger relative navigateTo the icon container */
 .@{fa-css-prefix}-lg {
   font-size: (4em / 3);
   line-height: (3em / 4);
